[gd_scene load_steps=12 format=3 uid="uid://cjf0jb6dq84f0"]

[ext_resource type="Script" uid="uid://dgacwybvva4w5" path="res://entities/unit/enemy/enemy.gd" id="1_6d84p"]
[ext_resource type="Texture2D" uid="uid://shuss6ppf6xt" path="res://assets/images/sprites/knight silver.png" id="2_6d84p"]
[ext_resource type="Texture2D" uid="uid://ch4plhhirat8u" path="res://assets/images/Shadow.png" id="2_nkb2i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5idxs"]
size = Vector2(14, 4)

[sub_resource type="Animation" id="Animation_3fqbo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_5fyko"]
resource_name = "walkDown"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 1), Vector2i(0, 2), Vector2i(0, 3)]
}

[sub_resource type="Animation" id="Animation_fw77w"]
resource_name = "walkLeft"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 0), Vector2i(2, 1), Vector2i(2, 2), Vector2i(2, 3)]
}

[sub_resource type="Animation" id="Animation_eiiim"]
resource_name = "walkRight"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(3, 0), Vector2i(3, 1), Vector2i(3, 2), Vector2i(3, 3)]
}

[sub_resource type="Animation" id="Animation_sinjt"]
resource_name = "walkUp"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(1, 1), Vector2i(1, 2), Vector2i(1, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_80d3x"]
_data = {
&"RESET": SubResource("Animation_3fqbo"),
&"walkDown": SubResource("Animation_5fyko"),
&"walkLeft": SubResource("Animation_fw77w"),
&"walkRight": SubResource("Animation_eiiim"),
&"walkUp": SubResource("Animation_sinjt")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_6d84p"]
radius = 69.00725

[node name="Enemy" type="CharacterBody2D"]
texture_filter = 1
collision_layer = 2
collision_mask = 3
motion_mode = 1
wall_min_slide_angle = 0.12217305
script = ExtResource("1_6d84p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_5idxs")

[node name="ShadowSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_nkb2i")

[node name="BodySprite" type="Sprite2D" parent="."]
texture = ExtResource("2_6d84p")
offset = Vector2(0, -8)
hframes = 4
vframes = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_80d3x")
}

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 5.0
target_desired_distance = 5.0
path_postprocessing = 1
avoidance_enabled = true
avoidance_layers = 2
avoidance_mask = 2
debug_enabled = true
debug_use_custom = true
debug_path_custom_color = Color(1, 0.04000002, 0.04000002, 1)

[node name="FollowArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="FollowArea"]
shape = SubResource("CircleShape2D_6d84p")

[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="body_entered" from="FollowArea" to="." method="_on_follow_area_body_entered"]
[connection signal="body_exited" from="FollowArea" to="." method="_on_follow_area_body_exited"]
